# woods

./: .dockerignore  .gitignore  Dockerfile  build.sh  container_entry.sh  run.sh  run_hot.sh
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: components.rs  ecs.rs  input.rs  lib.rs  runtime.rs  systems.rs
common/src/client_utils/: mod.rs
forward/: Dockerfile.hot  combined.conf  hot.conf
front/: build.ts  index.html  package-lock.json  package.json  server.ts  window.tsx  worker.ts
renderer/: Cargo.toml
renderer/shaders/: flat_color.frag.glsl  mvp.vert.glsl  tex_2d.frag.glsl  vert_color.frag.glsl
renderer/src/: io.rs  lib.rs  mem.rs  primitives.rs  proxies.rs  renderer.rs  shader.rs
server/: Cargo.toml
server/src/: main.rs
