[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common", features=["client-utils"] }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = { version = "0.3.60" }
web-sys = { version = "0.3.60", features = ["Window", "Element", "DomRect", "Document", "WebGlUniformLocation", "MessageEvent", "BroadcastChannel", "WebGlBuffer", "WebGlVertexArrayObject", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "HtmlCanvasElement", "WebGlTexture"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2.0"
cgmath = "0.18.0"
image = "0.24.5"